Cycle 2/Cycle 2/5/5.y
%{
    #include<stdio.h>
    int valid=1;   
%}

%token num id op

%%

start : id '=' s ';'

s :     id x       

      | num x       

      | '-' num x   

      | '(' s ')' x 

      ;

x :     op s        

      | '-' s       

      |             

      ;

%%

int yyerror() {
    valid=0;
    return 0;
}

int main() {
    printf("Enter the expression:\n");
    yyparse();
    if(valid)    {
        printf("\nValid expression.\n");
    }
    else{
        printf("\nInvalid expression.\n");
    }

}
